working version without UTF-8